[v3 theme] fix cncf footer alignment

--- a/themes/helm/assets/sass/docs-footer.scss
+++ b/themes/helm/assets/sass/docs-footer.scss
@@ -258,7 +258,7 @@ dl {
 }
 
 .cncf {
-  background: lighten(desaturate($light2, 50%), 7.5%);
+  background: lighten($light2, 7.5%);
   min-height: 2rem;
   text-align: center;
   padding-left: 300px;
